--- a/working-API/JSON-server/index.html
+++ b/working-API/JSON-server/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
   </head>
   <body>
+    <form action="">
+      <input type="text" id="name" placeholder="Nome do Produto">
+      <input type="text" id="price" placeholder="Preço do Produto">
+      <button type="submit">Cadastrar</button>
+    </form>
     <script src="script.js"></script>
   </body>
 </html>
